--- a/style.css
+++ b/style.css
@@ -82,6 +82,10 @@ caption, th, td {
 padding: 8px;
 
 }
+form {
+  width: 80%; /* Définit une largeur de 80% par rapport à son conteneur parent */
+  height: 100px; /* Définit une hauteur de 200 pixels */
+}
   
   /* Styles pour le pied de page */
   footer {
